# signal_processing

./: .gitignore  .gitmodules  BaseSignalProcessor.hpp  CMakeLists.txt  Doxyfile  FourierTransform.cpp  FourierTransform.hpp  Output.cpp  Output.h  Plot_Fourier.ipynb  Preprocessing.cpp  Preprocessing.h  README.md  SignalProcesser.cpp  SignalProcesser.h  SignalProcesser.hpp  SignalProcessor.cpp  SignalProcessor.hpp  TimeSignalProcessor.cpp  TimeSignalProcessor.hpp  ex_1  plots.gnu  plots.ipynb  plots.py  run_file.cpp  signal-processing.cbp  tests.cpp  utils.cpp
html/: _base_signal_processor_8cpp.html  _base_signal_processor_8cpp__incl.map  _base_signal_processor_8cpp__incl.md5  _base_signal_processor_8hpp.html  _base_signal_processor_8hpp__dep__incl.map  _base_signal_processor_8hpp__dep__incl.md5  _base_signal_processor_8hpp__incl.map  _base_signal_processor_8hpp__incl.md5  _base_signal_processor_8hpp_source.html  _fourier_transform_8cpp.html  _fourier_transform_8cpp__incl.map  _fourier_transform_8cpp__incl.md5  _fourier_transform_8hpp.html  _fourier_transform_8hpp__dep__incl.map  _fourier_transform_8hpp__dep__incl.md5  _fourier_transform_8hpp__incl.map  _fourier_transform_8hpp__incl.md5  _fourier_transform_8hpp_source.html  _output_8cpp.html  _output_8cpp__incl.map  _output_8h.html  _output_8h__dep__incl.map  _output_8h__incl.md5  _output_8h_source.html  _r_e_a_d_m_e_8md.html  _signal_processor_8cpp.html  _signal_processor_8cpp__incl.map  _signal_processor_8cpp__incl.md5  _signal_processor_8hpp.html  _signal_processor_8hpp__dep__incl.map  _signal_processor_8hpp__dep__incl.md5  _signal_processor_8hpp__incl.map  _signal_processor_8hpp__incl.md5  _signal_processor_8hpp_source.html  _time_signal_processor_8cpp.html  _time_signal_processor_8cpp__incl.map  _time_signal_processor_8cpp__incl.md5  _time_signal_processor_8hpp.html  _time_signal_processor_8hpp__dep__incl.map  _time_signal_processor_8hpp__dep__incl.md5  (+54 more)
latex/: _base_signal_processor_8cpp.tex  _base_signal_processor_8cpp__incl.md5  _base_signal_processor_8hpp.tex  _base_signal_processor_8hpp__dep__incl.md5  _base_signal_processor_8hpp__incl.md5  _fourier_transform_8cpp.tex  _fourier_transform_8cpp__incl.md5  _fourier_transform_8hpp.tex  _fourier_transform_8hpp__dep__incl.md5  _fourier_transform_8hpp__incl.md5  _output_8cpp__incl.md5  _signal_processor_8cpp.tex  _signal_processor_8cpp__incl.md5  _signal_processor_8hpp.tex  _signal_processor_8hpp__dep__incl.md5  _signal_processor_8hpp__incl.md5  _time_signal_processor_8cpp.tex  _time_signal_processor_8cpp__incl.md5  _time_signal_processor_8hpp.tex  _time_signal_processor_8hpp__dep__incl.md5  _time_signal_processor_8hpp__incl.md5  annotated.tex  class_base_signal_processor.tex  class_base_signal_processor__coll__graph.md5  class_base_signal_processor__inherit__graph.md5  class_fourier_transform.tex  class_fourier_transform__coll__graph.md5  files.tex  (+15 more)
(+171 files in other folders)
